# OEPNV-Wallet-ZXing-CPP-Adapter

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  oepnv-wallet-zxing-cpp-adapter.cpp
